2010-01-25  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add PointsToolbox/pts_pca.m:

	- PTS_PCA Linear and Kernel Principal Component Analysis (PCA and
	KPCA).

	This function was in my internal repository (r9953, v3.0,
	2008-06-14 22:07:56 +0100). I started developing it for my DPhil
	thesis at the Wolfson Medical Vision Laboratory, University of
	Oxford (2006-08-31 18:56:56 +0100).

	* Add PointsToolbox/pts_kmat.m:

	- PTS_KMAT Compute kernel matrix for Linear and Kernel Principal
	Component Analysis (PCA and KPCA).

	This function was in my internal repository (r7928, v2.3,
	2007-08-26 17:20:26 +0100). I started developing it for my DPhil
	thesis at the Wolfson Medical Vision Laboratory, University of
	Oxford (2007-06-09 15:27:07 +0100).

2009-12-08  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FileFormatToolbox/dcm2metaimage.m:

	- Read the resolution values from the DICOM header, if possible.

	- Add input arguments crop, ext, file and rewrite the function so
	that it does the same as im2metaimage().

2009-12-07  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add FileFormatToolbox/sortdirbynum.m:

	- SORTDIRBYNUM List the files in a directory ordering them by a
	numerical substring field in the file name

	* FileFormatToolbox/im2metaimage.m:

	- Add input arguments for image file extension and the possibility
	to contribute the image file listing, intead of using an internal
	DIR().

2009-11-25  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FileFormatToolbox/dcm2mat.m:

	- In case of a time series, we assume that all frames for slice 1
	are in consecutive DICOM files. Then all the frames for slice 2,
	and so on.

	Note that the output matrix is permuted to have the indices in the
	order (I,J,N,F), where N is the slice index and F is the frame
	index.

2009-11-24  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FileFormatToolbox/dcm2mat.m:

	- Add block to detect time series and create 4D volumes, if
	necessary.
